manifests/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: rest-server
  namespace: default
spec:
  ports:
    - port: 1234
      targetPort: 1234
  selector:
    app: rest-server
